Fix compilation with (all versions of) MinGW

Commit 320b16110f0f9cef032a64846dc792d40ccd367b changed the arguments
of swprintf to be compliant with latest MinGW-w64 headers: The headers now
excludes the non-standard swprintf(wchar*t,wchar_t*,...) version for C++11.

However, the swprintf(wchar_t*,size_t,wchar_t*,...) version is actually
not supported by e.g. stock Mingw-32 from mingw.org.

Instead, use _snwprintf(wchar_t*,size_t,wchar_t*,...), which both
MSVC, and all MinGW versions should support.

Task-number: QTBUG-28520
Change-Id: Icadd11773a25143e46a72c898adfd1c324f9c468
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: cf728e60a71629096188f5d680047414dbb4956b https://github.com/qt/qtbase/commit/cf728e60a71629096188f5d680047414dbb4956b